--- a/test/core/build.gradle
+++ b/test/core/build.gradle
@@ -1,6 +1,14 @@
 sourceCompatibility = 1.7
+dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter:5.6.2'
+    implementation 'junit:junit:4.13.1'
+}
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
 
 eclipse.project.name = appName + "-core"
+
+test {
+    useJUnitPlatform()
+}
